@startuml
'https://plantuml.com/class-diagram

interface DaoInterface
class Record
class RecordDao

DaoInterface<|.. RecordDao
Record <-- RecordDao
interface DaoInterface {
        getAllRecord():List<Record>
        add(Record record):void
        findFirst():Record
        sortAndPrintf():void
        showAll():void
        readFromFile()throws IOException, ClassNotFoundException:void
        writeToFile() throws IOException:void
        sort():void
        getLength():int
        ToString():String[][]
        delete(int index)boolean
        findLast()Record
}
class RecordDao{
    - ArrayList<Record> records
    + readFromFile()throws IOException, ClassNotFoundException:void
    + writeToFile()throws IOException:void
    +getAllRecord():List<Record>
    +add(Record record):void
    +findFirst():Record
    +sortAndPrintf():void
    +showAll():void
    +sort():void
    +getLength():int
    +ToString():String[][]
    +delete(int index)boolean
    +findLast()Record
}
class Record{
        -String name;
        -int score;
        -String time;

        +setName(String name):void

        +setScore(int score):void

        +setTime(String time):void

        +getName():String

        +getScore():int

        +getTime():String

        +Record(String name, int score)
}

@enduml